changed API for plugin config
